# bevy_third_person_camera

./: Cargo.toml  Changelog.md  README.md
.github/workflows/: rust.yml
assets/: Player.gltf
examples/: advanced.rs  controller.rs  custom.rs  default.rs  physics.rs
migrationGuides/: v0.1.10-v0.1.11.md  v0.1.14-v0.2.0.md  v0.1.9-v0.1.10.md
src/: camera.rs  gamepad.rs  lib.rs  main.rs  mod.rs  mouse.rs  player.rs  shared.rs  world.rs
src/camera/: gamepad.rs  mod.rs  mouse.rs  shared.rs
src/controller/: gamepad.rs  keyboard.rs  mod.rs
