[package]
name = "bevy_third_person_camera"
version = "0.1.14"
edition = "2021"
description = "A third person camera written for Bevy"
keywords = ["bevy", "camera", "orbit", "gamedev"]
categories = ["game-development"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/AndrewCS149/bevy_third_person_camera"
homepage = "https://github.com/AndrewCS149/bevy_third_person_camera"
readme = "README.md"
exclude = ["assets/*", "migrationGuides/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.15.0-rc.3", default-features = false }
wasm-bindgen = "0.2.95"

[dev-dependencies]
bevy = "0.15.0-rc.3"
bevy_rapier3d = "0.27.0"
