[package]
name = "bevy_third_person_camera"
version = "0.1.14"
edition = "2021"
description = "A third person camera written for Bevy"
keywords = ["bevy", "camera", "orbit", "gamedev"]
categories = ["game-development"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/AndrewCS149/bevy_third_person_camera"
homepage = "https://github.com/AndrewCS149/bevy_third_person_camera"
readme = "README.md"
exclude = ["assets/*", "migrationGuides/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.15.0", default-features = false, features = [
    "bevy_window",
] }

[dev-dependencies]
bevy = "0.15.0"
bevy_rapier3d = "0.27.0"
