[package]
name = "bevy_third_person_camera"
version = "0.4.1"
authors = ["Oleks Pickle <22867443+olekspickle@users.noreply.github.com>"]
edition = "2024"
description = "A third person camera written for Bevy"
keywords = ["bevy", "camera", "orbit", "gamedev"]
categories = ["game-development"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/olekspickle/bevy_third_person_camera"
homepage = "https://github.com/olekspickle/bevy_third_person_camera"
readme = "README.md"
exclude = ["assets/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
bevy = { version = "0.18", default-features = false, features = ["bevy_window", "gamepad"] }
avian3d = "0.6.0-rc.1"
bevy_unified_input = "0.2"

[dev-dependencies]
bevy = "0.18"
